--- a/package.json
+++ b/package.json
@@ -1,37 +1,35 @@
 {
-  "name": "code-it-svelte",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json"
-  },
-  "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
-    "@tsconfig/svelte": "^2.0.1",
-    "@types/wavesurfer.js": "^6.0.3",
-    "bootstrap": "^5.1.3",
-    "i": "^0.3.7",
-    "npm": "^8.6.0",
-    "sass": "^1.49.9",
-    "svelte": "^3.44.0",
-    "svelte-check": "^2.2.7",
-    "svelte-preprocess": "^4.9.8",
-    "tslib": "^2.3.1",
-    "typescript": "^4.5.4",
-    "vite": "^2.8.0",
-    "wavesurfer.js": "^6.1.0"
-  },
-  "dependencies": {
-    "@emailjs/browser": "^3.4.0",
-    "@types/underscore.string": "^0.0.38",
-    "bootstrap-icons": "^1.8.1",
-    "gsap": "^3.9.1",
-    "underscore": "^1.13.2",
-    "underscore.string": "^3.3.6",
-    "vite-plugin-dynamic-import": "^0.1.1"
-  }
+    "name": "code-it-svelte",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview",
+        "check": "svelte-check --tsconfig ./tsconfig.json"
+    },
+    "devDependencies": {
+        "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
+        "@tsconfig/svelte": "^2.0.1",
+        "@types/wavesurfer.js": "^6.0.3",
+        "@types/underscore.string": "^0.0.38",
+        "sass": "^1.49.9",
+        "svelte": "^3.44.0",
+        "svelte-check": "^2.2.7",
+        "svelte-preprocess": "^4.9.8",
+        "tslib": "^2.3.1",
+        "typescript": "^4.5.4",
+        "vite": "^2.8.0"
+    },
+    "dependencies": {
+        "@emailjs/browser": "^3.4.0",
+        "bootstrap": "^5.1.3",
+        "bootstrap-icons": "^1.8.1",
+        "gsap": "^3.9.1",
+        "underscore": "^1.13.2",
+        "underscore.string": "^3.3.6",
+        "vite-plugin-dynamic-import": "^0.1.1",
+        "wavesurfer.js": "^6.1.0"
+    }
 }
